@@ -621,4 +621,29 @@ public class AppSettings {
             syncSecondMentions = false;
         }
     }
+
+    public static int getCurrentTheme(SharedPreferences sharedPrefs) {
+        int theme = Integer.parseInt(sharedPrefs.getString("theme", "1")); // default is dark
+        if (sharedPrefs.getBoolean("night_mode", false)) {
+            int nightStartHour = sharedPrefs.getInt("night_start_hour", 22);
+            int nightStartMin = sharedPrefs.getInt("night_start_min", 0);
+            int dayStartHour = sharedPrefs.getInt("day_start_hour", 6);
+            int dayStartMin = sharedPrefs.getInt("day_start_min", 0);
+
+            Calendar c = Calendar.getInstance();
+            int hour = c.get(Calendar.HOUR_OF_DAY);
+            int minutes = c.get(Calendar.MINUTE);
+
+            int dayStartMinutes = dayStartHour * 60 + dayStartMin;
+            int nightStartMinutes = nightStartHour * 60 + nightStartMin;
+            int currentMinutes = hour * 60 + minutes;
+
+            if ((nightStartHour > dayStartHour && !(currentMinutes > dayStartMinutes && nightStartMinutes > currentMinutes)) ||
+                    (nightStartHour < dayStartHour && (currentMinutes < dayStartMinutes && nightStartMinutes < currentMinutes))) {
+                theme = sharedPrefs.getInt("night_theme", 1);
+            }
+        }
+
+        return theme;
+    }
 }
